--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,8 @@ share/python-wheels/
 MANIFEST
 
 
-src/finin_test/settings.ini
+src/railMan_test/settings.ini
+src/static/
 db.sqlite3
 db.sqlite3-journal
 
